# SlicerDeepUSE

./: README.md
DeepUSE/: CMakeLists.txt
DeepUSE/DeepUSE/: CMakeLists.txt  DeepUSE.py
DeepUSE/DeepUSE/Resources/UI/: DeepUSE.ui
